# HospitalManagementSystem

./: README.md  package-lock.json  package.json
Backend/: .gitignore
Backend/hospital_backend/: .env  Cargo.toml
Backend/hospital_backend/src/: api_routes.rs  db.rs  main.rs  models.rs
Database/: InsertData.sql  create.sql  hospital.db  query.sql
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/components/: DoctorCard.vue  NurseCard.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/appointments/: index.vue
frontend/pages/staff/: index.vue
frontend/pages/staff/doctors/: [employee_id].vue
frontend/pages/staff/nurses/: [employee_id].vue
frontend/pages/supplies/: index.vue  new.vue
frontend/server/middleware/: proxy.ts
